--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "frameworkintegration-4.99.0.tar.xz": e0f6c019d471913c1b4aed862ef0680c4686270a
+  frameworkintegration-5.0.0.tar.xz: 0a90cc0581d6608f8c2d04f0d9e078d8580d612e
